[gd_scene load_steps=24 format=2]

[ext_resource path="res://kitchen-sink/TestScreenEffectsSample.gd" type="Script" id=1]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxMotionBlur/MotionBlur.gdshader" type="Shader" id=2]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxShockwave/SxShockwave.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/SxVignette.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxMotionBlur/SxMotionBlur.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/sxgd/nodes/fx/SxFXCamera/SxFXCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxBetterBlur/SxBetterBlur.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/Vignette.gdshader" type="Shader" id=8]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxShockwave/Shockwave.gdshader" type="Shader" id=9]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXDissolve/SxFXDissolve.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXDissolve/SxFXDissolve.gdshader" type="Shader" id=11]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXGrayscale/SxFXGrayscale.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXGrayscale/SxFXGrayscale.gdshader" type="Shader" id=13]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXChromaticAberration/SxFXChromaticAberration.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFXChromaticAberration/SxFXChromaticAberration.gdshader" type="Shader" id=15]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/size = 10.0
shader_param/ratio = 0.25

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/center = Vector2( 100, 100 )
shader_param/force = 0.25
shader_param/size = 10.0
shader_param/thickness = 0.25

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/angle_degrees = 0.0
shader_param/samples = 10
shader_param/strength = 0.0

[sub_resource type="OpenSimplexNoise" id=4]
resource_local_to_scene = true

[sub_resource type="NoiseTexture" id=5]
resource_local_to_scene = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/dissolution_level = 0.0
shader_param/edge_width = 0.0
shader_param/edge_color1 = Color( 0, 0, 0, 1 )
shader_param/edge_color2 = Color( 0, 0, 0, 1 )
shader_param/replacement_color = Color( 0, 0, 0, 1 )
shader_param/noise = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 13 )
shader_param/ratio = 0.0

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/apply = true
shader_param/amount = 1.0

[node name="ScreenEffectsSample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SxVignette" parent="Effects" instance=ExtResource( 4 )]
visible = false
material = SubResource( 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="SxShockwave" parent="Effects" instance=ExtResource( 3 )]
visible = false
material = SubResource( 2 )

[node name="SxMotionBlur" parent="Effects" instance=ExtResource( 5 )]
visible = false
material = SubResource( 3 )

[node name="SxFXCamera" parent="Effects" instance=ExtResource( 6 )]
visible = false

[node name="SxBetterBlur" parent="Effects" instance=ExtResource( 7 )]
visible = false

[node name="SxFXDissolve" parent="Effects" instance=ExtResource( 10 )]
visible = false
material = SubResource( 6 )
replacement_color = Color( 0, 0, 0, 1 )

[node name="SxFXGrayscale" parent="Effects" instance=ExtResource( 12 )]
visible = false
material = SubResource( 7 )

[node name="SxFXChromaticAberration" parent="Effects" instance=ExtResource( 14 )]
visible = false
material = SubResource( 8 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Margin" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 240
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 80

[node name="Label" type="Label" parent="UI/Margin"]
margin_left = 40.0
margin_top = 40.0
margin_right = 784.0
margin_bottom = 71.0
size_flags_vertical = 0
text = "Choose an effect with the dropdown,
change parameters and press ENTER to validate."

[node name="Margin" type="MarginContainer" parent="UI/Margin"]
margin_left = 40.0
margin_top = 500.0
margin_right = 784.0
margin_bottom = 520.0
mouse_filter = 2
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/Margin/Margin"]
margin_right = 744.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/separation = 20

[node name="EffectType" type="HBoxContainer" parent="UI/Margin/Margin/HBox"]
margin_right = 362.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Name" type="Label" parent="UI/Margin/Margin/HBox/EffectType"]
margin_top = 3.0
margin_right = 15.0
margin_bottom = 17.0
text = "FX"

[node name="Value" type="OptionButton" parent="UI/Margin/Margin/HBox/EffectType"]
margin_left = 25.0
margin_right = 362.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Params" type="VBoxContainer" parent="UI/Margin/Margin/HBox"]
margin_left = 382.0
margin_right = 744.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
